--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Myxomycetes'
 - !lcc 'QK'
+- GITenberg
 title: 'The North American Slime-Moulds
 
   A Descriptive List of All Species of Myxomycetes Hitherto Reported from the Continent
